// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFieldNumber is rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  icon="alert"
  isloading="false"
>
  <eui-validatable-control>
    <input
      aria-label="aria-label"
      class="euiFieldNumber testClass1 testClass2 euiFieldNumber--withIcon"
      data-test-subj="test subject string"
      id="1"
      max="8"
      min="1"
      name="elastic"
      step="1"
      type="number"
      value="1"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldNumber props fullWidth is rendered 1`] = `
<eui-form-control-layout
  fullwidth="true"
  isloading="false"
>
  <eui-validatable-control>
    <input
      class="euiFieldNumber euiFieldNumber--fullWidth"
      type="number"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldNumber props isInvalid is rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  isloading="false"
>
  <eui-validatable-control
    isinvalid="true"
  >
    <input
      class="euiFieldNumber"
      type="number"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldNumber props isLoading is rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  isloading="true"
>
  <eui-validatable-control>
    <input
      class="euiFieldNumber euiFieldNumber-isLoading"
      type="number"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;
